# xion-types

./: .env  .gitignore  .gitmodules  CI_SETUP.md  CLAUDE.md  MANIFEST.in  Makefile  PROTO_DOCS.md  README.md  README_EXTENDED.md  buf.work.yaml  package-lock.json  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: README.md  auto-tag.yaml  check-unpublished-tags.yaml  claude.yml  delme-typescript-ci.yaml  dependency-validation.yml  dev-build.yaml  generate-protobuf.yaml  kotlin-protobuf.yaml  logs.txt  protobuf-gen.yaml  publish-kotlin.yaml  publish-python.yaml  publish-ruby.yaml  publish-rust.yaml  publish-swift.yaml  publish-ts.yaml  publish-types-ci.yaml  publish.yaml  python-protobuf.yaml  release.yaml  ruby-protobuf.yaml  rust-protobuf.yaml  swift-protobuf.yaml  ts-protobuf.yaml  typecheck-ts.yaml  typescript-ci.yaml  update-submodule.yaml
buf/: buf.gen.all.yaml  buf.gen.c.yaml  buf.gen.cpp.yaml  buf.gen.csharp.yaml  buf.gen.docs.yaml  buf.gen.java.yaml  buf.gen.js.yaml  buf.gen.kotlin.yaml  buf.gen.objc.yaml  buf.gen.php.yaml  buf.gen.python.yaml  buf.gen.ruby.yaml  buf.gen.rust.yaml  buf.gen.scala.yaml  buf.gen.swift.yaml  buf.gen.ts-proto.yaml  buf.gen.ts.yaml  docs.md.tmpl
csharp/types/: Coin.cs  Cosmos.cs  Genesis.cs  ProposalLegacy.cs  Tx.cs  Types.cs
docker/: Dockerfile
examples/: Modules_Messages_List.md
examples/kotlin/: GUIDE.md  README.md  cosmwasm-v1-query-messages.kt  cosmwasm-v1-transaction-messages.kt  feeabs-v1beta1-query-messages.kt  feeabs-v1beta1-transaction-messages.kt  globalfee-v1-query-messages.kt  indexer-authz-v1-query-messages.kt  indexer-feegrant-v1-query-messages.kt  jwk-v1-query-messages.kt  jwk-v1-transaction-messages.kt  mint-v1-query-messages.kt  mint-v1-transaction-messages.kt  test-compile.sh  validate.kt  xion-v1-query-messages.kt  xion-v1-transaction-messages.kt
examples/python/: GUIDE.md  cosmwasm_v1_query_messages.py  cosmwasm_v1_transaction_messages.py  feeabs_v1beta1_query_messages.py  globalfee_v1_query_messages.py  (+10 more)
examples/rust/: Cargo.toml  GUIDE.md
examples/rust/examples/: cosmwasm_v1_query_messages.rs  cosmwasm_v1_transaction_messages.rs  feeabs_v1beta1_query_messages.rs  feeabs_v1beta1_transaction_messages.rs  globalfee_v1_query_messages.rs  indexer_authz_v1_query_messages.rs  indexer_feegrant_v1_query_messages.rs  jwk_v1_query_messages.rs  jwk_v1_transaction_messages.rs  mint_v1_query_messages.rs  mint_v1_transaction_messages.rs  xion_v1_query_messages.rs  xion_v1_transaction_messages.rs
kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
python/: README.md  __init__.py
ruby/: xion_types.gemspec
rust/: Cargo.toml  README.md  build.rs
rust/src/: lib.rs  traits.rs
rust/types/: abstractaccount.v1.rs  cosmos.app.runtime.v1alpha1.rs  cosmos.app.v1alpha1.rs  cosmos.auth.module.v1.rs  cosmos.auth.v1beta1.rs  cosmos.authz.module.v1.rs  cosmos.authz.v1beta1.rs  cosmos.autocli.v1.rs  cosmos.bank.module.v1.rs  cosmos.bank.v1beta1.rs  cosmos.base.abci.v1beta1.rs  cosmos.base.node.v1beta1.rs  cosmos.base.query.v1beta1.rs  cosmos.base.reflection.v1beta1.rs  cosmos.base.reflection.v2alpha1.rs  cosmos.base.tendermint.v1beta1.rs  cosmos.base.v1beta1.rs  cosmos.benchmark.module.v1.rs  cosmos.benchmark.v1.rs  cosmos.circuit.module.v1.rs  cosmos.circuit.v1.rs  cosmos.consensus.module.v1.rs  cosmos.consensus.v1.rs  cosmos.counter.module.v1.rs  cosmos.counter.v1.rs  cosmos.crisis.module.v1.rs  cosmos.crisis.v1beta1.rs  cosmos.crypto.bls12_381.rs  cosmos.crypto.ed25519.rs  cosmos.crypto.hd.v1.rs  cosmos.crypto.keyring.v1.rs  cosmos.crypto.multisig.rs  cosmos.crypto.multisig.v1beta1.rs  cosmos.crypto.secp256k1.rs  cosmos.crypto.secp256r1.rs  cosmos.distribution.module.v1.rs  cosmos.distribution.v1beta1.rs  cosmos.epochs.module.v1.rs  cosmos.epochs.v1beta1.rs  cosmos.evidence.module.v1.rs  (+73 more)
rust/types/rust/: mod.rs
rust/types/rust/types/: cosmos.bank.module.v1.rs  cosmos.bank.v1beta1.rs  cosmos.base.node.v1beta1.rs  cosmos.base.query.v1beta1.rs  cosmos.base.v1beta1.rs  cosmos.crypto.hd.v1.rs  cosmos.crypto.multisig.rs  cosmos.crypto.secp256k1.rs  cosmos.epochs.v1beta1.rs  cosmos.genutil.v1beta1.rs  cosmos.gov.module.v1.rs  cosmos.gov.v1.rs  cosmos.params.module.v1.rs  cosmos.params.v1beta1.rs  cosmos.protocolpool.module.v1.rs  cosmos.protocolpool.v1.rs  cosmos.staking.v1beta1.rs  cosmos.upgrade.module.v1.rs  cosmos.upgrade.v1beta1.rs  cosmos.vesting.module.v1.rs  cosmos.vesting.v1beta1.rs  cosmwasm.wasm.v1.rs  ibc.applications.interchain_accounts.controller.v1.rs  ibc.applications.interchain_accounts.v1.rs  ibc.applications.transfer.v1.rs  ibc.core.channel.v1.rs  ibc.core.client.v2.rs  ibc.core.commitment.v1.rs  ibc.lightclients.solomachine.v2.rs  ibc.lightclients.solomachine.v3.rs  ibc.lightclients.wasm.v1.rs  mod.rs  tendermint.abci.rs  xion.indexer.authz.v1.rs  xion.indexer.feegrant.v1.rs  xion.jwk.v1.rs  xion.mint.v1.rs  xion.v1.rs  xion.zk.v1.rs
scripts/: checkout-xion-tag.sh  create-rust-package.sh  get-xion-latest.sh  proto-gen-ext.sh  proto-gen.sh  proto-sources.conf  setup-rust-package.py  setup-rust-types.py  ts-codegen.sh
swift/: Package.swift  buf.work.yaml
ts/: .gitignore  USAGE.md  burnt-labs-xion-types-0.0.1.tgz  index.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  telescope.config.json  tsconfig.esm.json  tsconfig.json  tsconfig.typecheck.json
ts-proto/: package.json  pnpm-lock.yaml  tsconfig.json
(+9642 files in other folders)
