[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xion-types"
version = "0.0.0"
description = "Generated Python types for Xion blockchain protocol buffers"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Burnt Labs", email = "info@burnt.com"}
]
repository = "https://github.com/burnt-labs/xion-types"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["xion_types"]
package-dir = {"" = "python"}

[tool.setuptools.package-data]
"*" = ["*.py", "py.typed"]

