[package]
name = "xion-types"
version = "0.1.0"
edition = "2021"
description = "Generated Rust types for Xion blockchain protocol buffers"
license = "Apache-2.0"
repository = "https://github.com/burnt-labs/xion-types"
readme = "README.md"

[lib]
name = "xion_types"
path = "src/lib.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
glob = "0.3"
regex = "1"
